Fix IE8 overflow problems

--- a/apps/smartgraphs/resources/css/style.css
+++ b/apps/smartgraphs/resources/css/style.css
@@ -289,3 +289,11 @@ body.sc-theme {
 	-webkit-border-radius:16px;
 	border-radius:16px;
 }
+
+/* fix for IE8 bug: percentage-height children of div with "overflow: hidden, min-height: xxx" inherit their height from
+  the (potentially smaller) PARENT of the div with min-height set!! This problem is fixed by removing overflow: hidden
+  from the div which has min-height set */
+  
+.sc-view.sg-overflow-fix {
+  overflow: visible;
+}
